# midicomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile.orig  README.md  ex1-plain.txt  ex1-verbose.txt  ex1.mid  midicomp.c  midicomp.h  midicomp.pro  midifile.h  t2mf.fl  t2mf.h  t2mflex.c  yyread.c
.github/workflows/: release-macos.yml
_journal/: 2026-06-13-security-audit.md  2026-06-13.md
tests/: run_test.cmake
tests/fixtures/: README.md  compile-hex-oob.txt  compile-timesig-denom0.txt  compile-value-oob.txt  header-division0.mid  huge-varlen.mid  meta-keysig-len0.mid  meta-smpte-len0.mid  meta-tempo-len0.mid  smpte.txt
